--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Gabriel Fernando Rey # your name (or website title) here
+title: Gabriel Rey # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Data Scientist | Data Engineer 
   <br><br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/gabriel-fernando-rey/">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
