--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist | Data Engineer 
   <br><br>
-  "Con entusiasmo, celebro el audaz giro que he dado en mi trayectoria profesional. Me llena de alegría haber trascendido los límites conocidos, abrazando nuevos desafíos con convicción. Este capítulo revitaliza mi espíritu y enciende la pasión que impulsa mi crecimiento y éxito continuo." 
+  "Con entusiasmo, celebro el giro que he dado en mi trayectoria profesional. Me llena de alegría haber trascendido los límites conocidos, abrazando nuevos desafíos con convicción. Este capítulo revitaliza mi espíritu y enciende la pasión que impulsa mi crecimiento y éxito continuo." 
   <br><br>
   <a href="https://www.linkedin.com/in/gabriel-fernando-rey/">View My LinkedIn Profile</a> 
   
