--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Gabriel Rey # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Gabriel Rey 
+logo: "/images/logo.png?raw=true" 
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist | Data Engineer 
   <br><br>
-  "Con entusiasmo, celebro el giro que he dado en mi trayectoria profesional. Me llena de alegría haber trascendido los límites conocidos, abrazando nuevos desafíos con convicción. Este capítulo revitaliza mi espíritu y enciende la pasión que impulsa mi crecimiento y éxito continuo." 
+  "Con entusiasmo, celebro el giro que he dado en mi trayectoria profesional. Me llena de alegría haber trascendido los límites conocidos, abrazando nuevos desafíos con convicción." 
   <br><br>
   <a href="https://www.linkedin.com/in/gabriel-fernando-rey/">View My LinkedIn Profile</a> 
   
