--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/logo.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist | Data Engineer 
   <br><br>
-  "Con entusiasmo, celebro el giro que he dado en mi trayectoria profesional. Me llena de alegría haber trascendido los límites conocidos, abrazando nuevos desafíos con convicción." 
+  "Con entusiasmo, celebro el giro que he dado en mi trayectoria profesional. Haber trascendido los límites conocidos me permite abrazar nuevos desafíos con convicción." 
   <br><br>
   <a href="https://www.linkedin.com/in/gabriel-fernando-rey/">View My LinkedIn Profile</a> 
   
